# routes/auth.routes.js
@@ -1,0 +1,12 @@
+const express = require('express');
+const router = express.Router();
+const auth = require('../controllers/auth.controller')
+const Authorize= require('../middlewares/auth.middleware');
+
+// POST: api/auth
+router.post('/', auth.login)
+
+// GET: api/auth/tiempo
+router.get ('/tiempo',Authorize('Administrador'), auth.tiempo)
+
+module.exports = router
